--- a/apache/wp.conf
+++ b/apache/wp.conf
@@ -1,73 +1,97 @@
-#ServerName localhost
+<VirtualHost *:80>
+	# The ServerName directive sets the request scheme, hostname and port that
+	# the server uses to identify itself. This is used when creating
+	# redirection URLs. In the context of virtual hosts, the ServerName
+	# specifies what hostname must appear in the request's Host: header to
+	# match this virtual host. For the default virtual host (this file) this
+	# value is not decisive as it is used as a last resort host regardless.
+	# However, you must set it for any further virtual host explicitly.
+	#ServerName www.example.com
 
-# The most efficient way to serve files and cache objects.
-EnableSendFile On
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/html
 
-<IfModule expires_module>
-ExpiresActive Off
-ExpiresDefault "access plus 1 hour"
-</IfModule>
+	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
+	# error, crit, alert, emerg.
+	# It is also possible to configure the loglevel for particular
+	# modules, e.g.
+	#LogLevel info ssl:warn
 
-<IfModule rewrite_module>
-RewriteEngine On
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
-RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
-# This deviates from the WP default rewrite configuration as we include
-# the "path info" back reference ($0) and query string (QSA) for use as
-# the cache key for mod_cache!
-RewriteRule .* /index.php$0 [L,QSA]
-</IfModule>
+	ErrorLog syslog
+	CustomLog "||/usr/bin/logger" combined
 
-# https://httpd.apache.org/docs/2.2/mod/mod_dir.html#fallbackresource
-<IfModule dir_module>
-FallbackResource /index.php
-</IfModule>
+  # The most efficient way to serve files and cache objects.
+  EnableSendFile On
 
-<IfModule cache_disk_module>
-CacheEnable disk /
-# Do not cache the Woo Commerce API
-CacheDisable /wc-api/
-CacheLock On
-CacheLockPath "/tmp/mod_cache-lock"
-CacheLockMaxAge 5
-CacheHeader On
-CacheDetailHeader On
-CacheStoreExpired On
-CacheIgnoreNoLastMod On
-CacheDefaultExpire 60
-CacheIgnoreHeaders Set-Cookie
-</IfModule>
+  <IfModule expires_module>
+  ExpiresActive Off
+  ExpiresDefault "access plus 1 hour"
+  </IfModule>
 
-<IfModule php5_module>
-# 7s is long enough to try and service a request
-php_value max_execution_time 7
-# Ditto for sockets
-php_value default_socket_timeout 5
+  <IfModule rewrite_module>
+  RewriteEngine On
+  RewriteRule ^index\.php$ - [L]
+  RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
+  RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
+  # This deviates from the WP default rewrite configuration as we include
+  # the "path info" back reference ($0) and query string (QSA) for use as
+  # the cache key for mod_cache!
+  RewriteRule .* /index.php$0 [L,QSA]
+  </IfModule>
 
-# Sane error message defaults
-php_flag display_errors Off
-php_flag display_startup_errors Off
-php_flag html_errors Off
-php_flag log_errors On
+  # https://httpd.apache.org/docs/2.2/mod/mod_dir.html#fallbackresource
+  <IfModule dir_module>
+  FallbackResource /index.php
+  </IfModule>
 
-# File uploads
-php_flag file_uploads On
-php_value upload_tmp_dir /tmp/php
-php_value upload_max_filesize 8M
-php_value post_max_size 16M
-php_value max_file_uploads 2
+  <IfModule cache_disk_module>
+  CacheEnable disk /
+  # Do not cache the Woo Commerce API
+  CacheDisable /wc-api/
+  CacheLock On
+  CacheLockPath "/tmp/mod_cache-lock"
+  CacheLockMaxAge 5
+  CacheHeader On
+  CacheDetailHeader On
+  CacheStoreExpired On
+  CacheIgnoreNoLastMod On
+  CacheDefaultExpire 60
+  CacheIgnoreHeaders Set-Cookie
+  </IfModule>
 
-# A useful default
-php_value date.timezone Pacific/Auckland
+  <IfModule php5_module>
+  # 7s is long enough to try and service a request
+  php_value max_execution_time 7
+  # Ditto for sockets
+  php_value default_socket_timeout 5
 
-php_flag cgi.fix_pathinfo Off
+  php_value memory_limit 64M
 
-# Disable PHP for uploads and deny any request for a PHP file.
-<Directory /var/www/html/wp-content/uploads/>
-php_admin_flag engine 0
-<Files *.php>
-Deny from all
-</Files>
-</Directory>
-</IfModule>
+  # Sane error message defaults
+  php_flag display_errors Off
+  php_flag display_startup_errors Off
+  php_flag html_errors Off
+  php_flag log_errors On
+
+  # File uploads
+  php_flag file_uploads On
+  php_value upload_tmp_dir /tmp/php
+  php_value upload_max_filesize 8M
+  php_value post_max_size 16M
+  php_value max_file_uploads 2
+
+  # A useful default
+  php_value date.timezone Pacific/Auckland
+
+  php_flag cgi.fix_pathinfo Off
+
+  # Disable PHP for uploads and deny any request for a PHP file.
+  <Directory /var/www/html/wp-content/uploads/>
+  php_admin_flag engine 0
+  <Files *.php>
+  Deny from all
+  </Files>
+  </Directory>
+  </IfModule>
+
+</VirtualHost>
