--- a/apache/wp.conf
+++ b/apache/wp.conf
@@ -18,7 +18,7 @@
 	#LogLevel info ssl:warn
 
 	ErrorLog syslog
-	CustomLog "||/usr/bin/logger" combined
+	CustomLog "||/usr/bin/logger -t apache -i" combined
 
   # The most efficient way to serve files and cache objects.
   EnableSendFile On
