changed to a regex to match wp-content/uploads, to avoid hardcoding doc root

--- a/apache/wp.conf
+++ b/apache/wp.conf
@@ -9,7 +9,7 @@
 	#ServerName www.example.com
 
 	ServerAdmin webmaster@localhost
-	
+
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
 	# It is also possible to configure the loglevel for particular
@@ -60,7 +60,7 @@
 
   <IfModule php5_module>
 	# Disable PHP for uploads and deny any request for a PHP file.
-  <Directory /var/www/html/wp-content/uploads/>
+  <Directory ~ /wp-content/uploads/>
   php_admin_flag engine 0
   <Files *.php>
   Deny from all
