removed autoindex, added directory index, tweaked test compose config, fixes #1

--- a/apache/wp.conf
+++ b/apache/wp.conf
@@ -40,6 +40,7 @@
 
   # https://httpd.apache.org/docs/2.2/mod/mod_dir.html#fallbackresource
   <IfModule dir_module>
+  DirectoryIndex index.php
   FallbackResource /index.php
   </IfModule>
 
