varied on x-forwarded-proto so that http and https forwarded payloads are cached as separate objects

--- a/apache/proxy.conf
+++ b/apache/proxy.conf
@@ -24,11 +24,11 @@ EnableSendFile On
 	RequestHeader set X-Woocommerce-Session-Customer %{WOOCOMMERCE_SESSION_CUSTOMER}e env=WOOCOMMERCE_SESSION_CUSTOMER
 
 	ProxyPass / http://127.0.0.1/
-	#ProxyPassReverse / http://127.0.0.1/
 	ProxyPreserveHost On
 
 	# Remove the Vary headers used by the cache
 	Header edit* Vary X-Woocommerce-(?:Cart-Hash|Session-Customer) ""
+
 	Header merge Vary Cookie
 
 	# Output some interesting performance stats.
@@ -42,7 +42,6 @@ EnableSendFile On
 	CacheDetailHeader On
 	CacheEnable disk /
 	CacheHeader On
-	CacheIgnoreCacheControl On # Ignore what the client asks for
 	CacheIgnoreHeaders Set-Cookie
 	CacheIgnoreNoLastMod On # Use CacheDefaultExpire
 	CacheLock On
@@ -67,6 +66,9 @@ EnableSendFile On
 
 	# Vary on the cart hash and the session's customer ID
 	Header merge Vary X-Woocommerce-Cart-Hash,X-Woocommerce-Session-Customer
+
+ 	# Vary on the protocol, as we use this header to punk is_ssl in wordpress.
+	Header merge Vary X-Forwarded-Proto
 
 	# Defaults
 	ExpiresActive On
