added nicer test index.php, stripped unwanted vary header values, fixes #4

--- a/apache/proxy.conf
+++ b/apache/proxy.conf
@@ -4,7 +4,6 @@ CustomLog "||/usr/bin/logger -t apache -i" combined
 # The most efficient way to serve files and cache objects.
 EnableSendFile On
 
-# Req: setenvif_module, headers_module, proxy_http_module
 <VirtualHost *:80>
 	DirectoryIndex disabled
 
@@ -28,8 +27,7 @@ EnableSendFile On
 
 	# Remove the Vary headers used by the cache
 	Header edit* Vary X-Woocommerce-(?:Cart-Hash|Session-Customer) ""
-
-	Header merge Vary Cookie
+	Header edit* Vary X-Forwarded-Proto ""
 
 	# Output some interesting performance stats.
 	Header always set X-Performance "%D %t %l %i %b"
