added better test index.php with inline image to bulk up the data size for testing; removed all (silly) defaults for munging expires or cache-control headers, the "application" is responsible for issuing proper headers, added instructions for htcacheclean-ing fixes #6

--- a/apache/proxy.conf
+++ b/apache/proxy.conf
@@ -34,14 +34,12 @@ EnableSendFile On
 
 </VirtualHost>
 
-# Req: cache_disk_module, dir_module, php5_module
 <VirtualHost 127.0.0.1:80>
-	CacheMinExpire 600
 	CacheDetailHeader On
 	CacheEnable disk /
 	CacheHeader On
 	CacheIgnoreHeaders Set-Cookie
-	CacheIgnoreNoLastMod On # Use CacheDefaultExpire
+	CacheIgnoreNoLastMod On # Use CacheDefaultExpire (defaults to one hour)
 	CacheLock On
 	CacheStoreExpired On
 
@@ -59,19 +57,10 @@ EnableSendFile On
 		</Files>
 	</Directory>
 
-	# API: do not cache the API
-	SetEnvIf Request_URI ^/wc-api/ no-cache=$0
-
 	# Vary on the cart hash and the session's customer ID
 	Header merge Vary X-Woocommerce-Cart-Hash,X-Woocommerce-Session-Customer
 
  	# Vary on the protocol, as we use this header to punk is_ssl in wordpress.
 	Header merge Vary X-Forwarded-Proto
-
-	# Defaults
-	ExpiresActive On
-	ExpiresDefault "modification plus 1 days"
-	ExpiresByType text/html "access plus 10 minutes"
-	ExpiresByType application/json "access"
 
 </VirtualHost>
