--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ apache:
       reqdel X-Forwarded-Proto,
       reqadd X-Forwarded-Proto:\ http unless https,
       reqadd X-Forwarded-Proto:\ https if https,
+    CRON_D_HTCACHECLEAN: |
+      SHELL=/bin/sh
+      @hourly www-data /usr/bin/htcacheclean -p /var/cache/apache2/mod_cache_disk -n -v -t -l 1024M | logger
+
 
 fpm:
   # image: nickbreen/wp-php:fpm
