--- a/apache/proxy.conf
+++ b/apache/proxy.conf
@@ -1,9 +1,3 @@
-ErrorLog syslog
-CustomLog "||/usr/bin/logger -t apache -i" combined
-
-# The most efficient way to serve files and cache objects.
-EnableSendFile On
-
 <VirtualHost *:80>
 	DirectoryIndex disabled
 
@@ -25,42 +19,14 @@ EnableSendFile On
 	ProxyPass / http://127.0.0.1/
 	ProxyPreserveHost On
 
-	# Remove the Vary headers used by the cache
-	Header edit* Vary X-Woocommerce-(?:Cart-Hash|Session-Customer) ""
-	Header edit* Vary X-Forwarded-Proto ""
+	# Remove the Vary headers used by the cache, don't forget to remove the commas too.
+	Header edit* Vary X-Woocommerce-(?:Cart-Hash|Session-Customer),? ""
+	Header edit* Vary X-Forwarded-Proto,? ""
+
+	# Unset the Vary header if it's empty.
+	Header unset Vary "expr=-z %{resp:Vary}"
 
 	# Output some interesting performance stats.
 	Header always set X-Performance "%D %t %l %i %b"
-
-</VirtualHost>
-
-<VirtualHost 127.0.0.1:80>
-	CacheDetailHeader On
-	CacheEnable disk /
-	CacheHeader On
-	CacheIgnoreHeaders Set-Cookie
-	CacheIgnoreNoLastMod On # Use CacheDefaultExpire (defaults to one hour)
-	CacheLock On
-	CacheStoreExpired On
-
-	# https://httpd.apache.org/docs/2.4/mod/mod_dir.html#fallbackresource
-	# This is the contemporary way to hand requests off to PHP/WP/whatever
-	DirectoryIndex index.php
-	FallbackResource /index.php
-
-	# Disable PHP for uploads and deny any request for a PHP file.
-	<Directory ~ /wp-content/uploads/>
-		php_admin_flag engine 0
-		FallbackResource disabled
-		<Files *.php>
-			Deny from all
-		</Files>
-	</Directory>
-
-	# Vary on the cart hash and the session's customer ID
-	Header merge Vary X-Woocommerce-Cart-Hash,X-Woocommerce-Session-Customer
-
- 	# Vary on the protocol, as we use this header to punk is_ssl in wordpress.
-	Header merge Vary X-Forwarded-Proto
 
 </VirtualHost>
