--- a/apache/cache.conf
+++ b/apache/cache.conf
@@ -44,4 +44,8 @@
   ExpiresActive On
   ExpiresDefault "modifcation plus 1 year"
 
+  # Stale serving is a good thing!
+  Header merge Cache-Control stale-while-revalidate=86400
+  Header merge Cache-Control stale-if-error=86400
+
 </VirtualHost>
