added hostname to logs

--- a/apache/log.conf
+++ b/apache/log.conf
@@ -1,5 +1,5 @@
 # Update logging to use X-Forwarded-For, if set. instead of the remote IP
-LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" forward
+LogFormat "\"%{X-Forwarded-For}i\" %V %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" forward
 SetEnvIf X-Forwarded-For "^.*\..*\..*\..*" forwarded
 CustomLog "||/usr/bin/logger -t apache -i" combined env=!forwarded
 CustomLog "||/usr/bin/logger -t apache -i" forward env=forwarded
