--- a/apache/log.conf
+++ b/apache/log.conf
@@ -1,8 +1,7 @@
-# Update logging to use X-Forwarded-For, if set. instead of the remote IP
-LogFormat "\"%{X-Forwarded-For}i\" %V %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" forward
-SetEnvIf X-Forwarded-For "^.*\..*\..*\..*" forwarded
-CustomLog "||/usr/bin/logger -t apache -i" combined env=!forwarded
-CustomLog "||/usr/bin/logger -t apache -i" forward env=forwarded
+
+SetEnvIf X-Forwarded-For ".+" forwarded
+CustomLog "|/usr/bin/logger --tag apache --stderr" "%h %V %m %U %q %>s %D %B" env=!forwarded
+CustomLog "|/usr/bin/logger --tag apache --stderr" "%h %V %m %U %q %>s %D %B \"%{X-Forwarded-For}i\"" env=forwarded
 
 ErrorLog syslog
 
