--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,92 +5,18 @@ services:
       build:
           context: apache
       ports:
-        - 8012:80
+        - "80:80"
+      links:
+        - fpm:fastcgi
       volumes:
-        - .:/var/www
-        - ./index.php:/var/www/index.php
+        - ./www:/var/www
       environment:
         CRON_D_HTCACHECLEAN: |
-          SHELL=/bin/sh
-          @hourly www-data /usr/bin/htcacheclean -p /var/cache/apache2/mod_cache_disk -n -v -t -l 1024M | logger
+          @hourly www-data /usr/bin/htcacheclean -p /var/cache/apache2/mod_cache_disk -n -v -t -l 64M | logger
 
     fpm:
       image: nickbreen/wp-php:fpm
       build:
           context: fpm
       volumes:
-        - .:/var/www
-        - ./index.php:/var/www/index.php
-
-    www:
-      image: nickbreen/lighttpd
-      ports:
-        - 8011:80
-      links:
-        - fpm:fastcgi
-      volumes_from:
-        - fpm
-
-    haproxy:
-      image: dockercloud/haproxy
-      links:
-    #    - www
-        - apache
-      volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
-      ports:
-        - "8010:80"
-        - "8443:443"
-        - "9936:1936"
-      environment:
-        STATS_AUTH: stats:stats
-        XCERT_FOLDER: /certs/
-        DEFAULT_SSL_CERT: |
-          -----BEGIN PRIVATE KEY-----
-          MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDeVQYXF+A1Sc4j
-          C+RRUkac5IFLAB99FqBV1QToAc1G31PWYRAotQXbSb/LI1z/9tLtNV1onjwgZTLY
-          gh4MGoX78DZk3SemijaVKYwbTJTrj+BKsNeVikoyU3ZdUPkQIfpKorXsndgbcIOx
-          4DgRSiDfaUQe3ouXuVsbYr0KhwBj5+9ahYPH+pcjaHdWLlvHZOOd5o4dgjNVJ4zY
-          /59N82q8X1n9khzK54VFa9DFmA010kghAomYV41c3xrrX/IeohQbNkdrA3ftGqTd
-          G44/QrfMQd+S/WLmO7cb/XFeV8JFKLCYnxX3+Gsh3UMUY6bntANEqsr3rYKGWWOF
-          7i6PvlkRAgMBAAECggEAZFC0mMLbFPAiJEn/UHnxBmVLuQ1rJ8OHwHKG7i+x8WJe
-          r4HICrXy2IikEwH3uj4h2YmUhdmvg2Zl1K6Q5CErhwtRX50xgMEn85F1d/PL1aVr
-          LAgynXRyGdbytxQL7K2IAxj7QLHPikHwCdgDNDngLy2N4OfE0EZ/xxF7/j3/fROX
-          Z2qnyM3wGCM3+LAJOK+HOphClh4Vp6SyeDwSdvOHnX0jHnUqmrNrlXzmmtUiyUoz
-          4FSF719IMawqHdvMEcOSxjID1nPJnQw0HSMbJYg33u7Gr30BMVxwhMHPHndEaaNm
-          ZPkVQ1ypDjvmwNChhgbRTYUQ2d9svdIlzsT/B3jgaQKBgQD/8OaO2PiaYmysj1Pz
-          fy9PMjRJXNRmYyhRCqRhagvUc57bdQNLZiZisi+T8q0XTWpq9VAd+UoTeoQoQRgg
-          PZlzxdIG/Q6JPRRUrwUxl/oCf0Oli8x/XhMA+gzLs4ymxW9dnjiZH4aipPcD4COB
-          OcH6C541nKSIlVsjNtJ4847JawKBgQDeYiPxE7wmFW8bp70B7YH0z7YaLBO8K2j1
-          A9HpYouj62I+ipBd+VU5+hk+VSUf26dHM8MgfjsAJw62ZFi8sIDWr9ZoffV8YpOy
-          OO7mILfxpnznx8CG4ICnk+dMVmXBiltbLqBegYq68J+g3vaFgu6zN5L+z+zaCWHQ
-          le+yYq8acwKBgQCsNSrscpDTT+ZPNSEHdUwfvWfw9MT1H0LBRKfV48SR7jm078aH
-          tPOe9MWOhnpwc2ZnESgXAuUUthq1+xaAmvHlM/VdPmfJb49+a0TTWa6ef4LEoIu4
-          J1QiFB0H8odwrud/1jW+0beFN/n8YZOCH5qk46xP5lXOkLABwaFcQISSgQKBgQCX
-          D4dmrYczP4AYAxtrAdEzYR1MLgDB46MKPKwMozpEARLddPaYP1Rba75WDzSGrYi1
-          3z1/BwBBHEbsMsHseuEp9IvqsxVchwHZIL93Z2ZMKlHSiGgJttrt+pQ10MKSc8+W
-          4tdhGxIH5ogomQxQqR5Ic0nQ+aDkg1cEf7UxMcPMbQKBgG0h3SFrr2sTOqNhddiv
-          rn206nrWn2sYG+nM3rmAWoxdtM4DSUa18uQJwTTftZF3ozttYlkvZ+uWXINVVtjF
-          cKkb/hWMpwGQi1U1cZDV4y+CeP9fNVs26vLdd2o0jnlQgFgVlfoH8cCIZFmdFjl/
-          HYi4wSUGQYsnFEPnI8UhbSKA
-          -----END PRIVATE KEY-----
-          -----BEGIN CERTIFICATE-----
-          MIIDQzCCAiugAwIBAgIJAOrt4AojSK28MA0GCSqGSIb3DQEBCwUAMDgxCjAIBgNV
-          BAMMASoxHTAbBgNVBAoMFE15IENvbXBhbnkgTmFtZSBMVEQuMQswCQYDVQQGEwJV
-          UzAeFw0xNjAzMzAwNjM1MTVaFw0xOTAzMTUwNjM1MTVaMDgxCjAIBgNVBAMMASox
-          HTAbBgNVBAoMFE15IENvbXBhbnkgTmFtZSBMVEQuMQswCQYDVQQGEwJVUzCCASIw
-          DQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAN5VBhcX4DVJziML5FFSRpzkgUsA
-          H30WoFXVBOgBzUbfU9ZhECi1BdtJv8sjXP/20u01XWiePCBlMtiCHgwahfvwNmTd
-          J6aKNpUpjBtMlOuP4Eqw15WKSjJTdl1Q+RAh+kqiteyd2Btwg7HgOBFKIN9pRB7e
-          i5e5WxtivQqHAGPn71qFg8f6lyNod1YuW8dk453mjh2CM1UnjNj/n03zarxfWf2S
-          HMrnhUVr0MWYDTXSSCECiZhXjVzfGutf8h6iFBs2R2sDd+0apN0bjj9Ct8xB35L9
-          YuY7txv9cV5XwkUosJifFff4ayHdQxRjpue0A0SqyvetgoZZY4XuLo++WRECAwEA
-          AaNQME4wHQYDVR0OBBYEFNf97oy01fzVPRs/PUDjyURcKuw7MB8GA1UdIwQYMBaA
-          FNf97oy01fzVPRs/PUDjyURcKuw7MAwGA1UdEwQFMAMBAf8wDQYJKoZIhvcNAQEL
-          BQADggEBACao24UOzf2oVuzJrMuLiTZ3VCZoYpoODDmobz40xRJPG1rli5/41Ktr
-          iUYc1f4RItkQonLC/lZ9IqMrq+eUBEj4cuFNcXnrdS9Xg3zdAgB9kHfoXEcfe+4k
-          8IX+YpPs4KEL8UTS1YZVT5N3sfnfAnJCBp9VJa8WOcMQ8PNT2N5IsPt4cc79s4U0
-          y1Zv8MIdrCfMb604PH3eQXQdccGbc0LgOgJt0m8NSlv2lgIQ4RX31moPqO7y2P/p
-          05fBLhg6b8tJqmVF/FolN6hZRpOsXYSuvwl4Uhp/yFEpem7fsFh1BeQrukD60Pg7
-          nQxaKuaRLl7gtT98Jywrr8moY1l0QXo=
-          -----END CERTIFICATE-----
+        - ./www:/var/www
