--- a/fpm/www.conf
+++ b/fpm/www.conf
@@ -15,6 +15,7 @@
 ; Note: This directive can also be relative to the global prefix.
 ; Default Value: none
 ;prefix = /path/to/pools/$pool
+prefix = /var/www
 
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
@@ -223,6 +224,7 @@ pm.max_spare_servers = 3
 ;       may conflict with a real PHP file.
 ; Default Value: not set
 ;pm.status_path = /status
+pm.status_path = /status-fpm
 
 ; The ping URI to call the monitoring page of FPM. If this value is not set, no
 ; URI will be recognized as a ping page. This could be used to test from outside
@@ -235,6 +237,7 @@ pm.max_spare_servers = 3
 ;       may conflict with a real PHP file.
 ; Default Value: not set
 ;ping.path = /ping
+ping.path = /ping-fpm
 
 ; This directive may be used to customize the response of a ping request. The
 ; response is formatted as text/plain with a 200 response code.
@@ -305,12 +308,14 @@ access.log = syslog
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
 ;slowlog = log/$pool.log.slow
+slowlog = syslog
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays)
 ; Default Value: 0
 ;request_slowlog_timeout = 0
+request_slowlog_timeout = 15s
 
 ; The timeout for serving a single request after which the worker process will
 ; be killed. This option should be used when the 'max_execution_time' ini option
@@ -338,6 +343,7 @@ access.log = syslog
 ;       (error_log, sessions.save_path, ...).
 ; Default Value: not set
 ;chroot =
+chroot = $prefix
 
 ; Chdir to this directory at the start.
 ; Note: relative path can be used.
@@ -349,7 +355,7 @@ chdir = /
 ; Note: on highloaded environement, this can cause some delay in the page
 ; process time (several ms).
 ; Default Value: no
-;catch_workers_output = yes
+catch_workers_output = yes
 
 ; Limits the extensions of the main script FPM will allow to parse. This can
 ; prevent configuration mistakes on the web server side. You should only limit
@@ -392,3 +398,5 @@ chdir = /
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+php_value[cgi.fix_pathinfo] = 0
+php_value[proxy-fcgi-pathinfo] = 0
