--- a/apache/cache.conf
+++ b/apache/cache.conf
@@ -1,4 +1,4 @@
-<VirtualHost 127.0.0.1:80>
+<VirtualHost 127.0.0.2:80>
 	CacheDetailHeader On
 	CacheEnable disk /
 	CacheHeader On
@@ -7,19 +7,8 @@
 	CacheLock On
 	CacheStoreExpired On
 
-	# https://httpd.apache.org/docs/2.4/mod/mod_dir.html#fallbackresource
-	# This is the contemporary way to hand requests off to PHP/WP/whatever
-	DirectoryIndex index.php
-	FallbackResource /index.php
-
-	# Disable PHP for uploads and deny any request for a PHP file.
-	<Directory ~ /wp-content/uploads/>
-		php_admin_flag engine 0
-		FallbackResource disabled
-		<Files *.php>
-			Deny from all
-		</Files>
-	</Directory>
+	ProxyPass / http://127.0.0.3/
+	ProxyPreserveHost On
 
 	# Vary on the cart hash and the session's customer ID
 	Header merge Vary X-Woocommerce-Cart-Hash,X-Woocommerce-Session-Customer
@@ -38,14 +27,7 @@
 	SetEnvIf Cache-Control must-revalidate MUST_REVALIDATE=$0
 	Header merge Cache-Control proxy-revalidate env=MUST_REVALIDATE
 
-	# For any file on disk, assume a distant expiry date.
-  # The cache requires an Expires/Cache-Control header for files when requested
-  # with a query string (like WordPress does for versioned CSS/JS files).
-  ExpiresActive On
-  ExpiresDefault "modifcation plus 1 year"
-
   # Stale serving is a good thing!
-  Header merge Cache-Control stale-while-revalidate=86400
-  Header merge Cache-Control stale-if-error=86400
-
+  Header merge Cache-Control stale-while-revalidate=300
+  Header merge Cache-Control stale-if-error=900
 </VirtualHost>
