apache + php-fpm

--- a/apache/php-fpm.conf
+++ b/apache/php-fpm.conf
@@ -1,7 +1,11 @@
 <VirtualHost 127.0.0.3:80>
   DocumentRoot /var/www
-  DirectoryIndex disabled
-  DirectoryIndex index.php
+
+  <Location />
+    DirectoryIndex disabled
+    DirectoryIndex index.php
+    Options -Indexes
+  </Location>
 
   # https://httpd.apache.org/docs/2.4/mod/mod_dir.html#fallbackresource
   # This is the contemporary way to hand requests off to PHP/WP/whatever
@@ -10,24 +14,24 @@
   # Disable PHP for uploads and deny any request for a PHP file.
   <Location /wp-content/uploads/>
     DirectoryIndex disabled
-    ProxyPass "!"
+    #ProxyPass "!"
     RedirectMatch 404 "\.php"
-    Options -Indexes
   </Location>
 
   <Location "/status-apache">
     SetHandler server-status
   </Location>
 
-  #<Files "*.php">
-    #SetHandler "proxy:fcgi://fastcgi:9000"
-  #</Files>
+  <Location ~ "^/(ping|status)-fpm$">
+    SetHandler "proxy:fcgi://fastcgi:9000"
+  </Location>
 
-  #AddHandler "proxy:fcgi://fastcgi:9000" .php
+  # Requires that the PHP-FPM pool is not chrooted, or at least chrooted the same as apache.
+  AddHandler "proxy:fcgi://fastcgi:9000" .php
 
-  ProxyPassMatch '^/(?:ping|status)-fpm$' "fcgi://fastcgi:9000"
-  ProxyPassMatch '\.php$' "fcgi://fastcgi:9000"
-  ProxyPreserveHost On
+  # Requires that the PHP-FPM pool is chroot'd or chdir'd, otherwise the docroot must be appended to the fcgi:// URI
+  #ProxyPassMatch '\.php$' "fcgi://fastcgi:9000"
+  #ProxyPreserveHost On
 
   # For any file on disk, assume a distant expiry date.
   # The cache requires an Expires/Cache-Control header for files when requested
