--- a/fpm/www.conf
+++ b/fpm/www.conf
@@ -15,7 +15,7 @@
 ; Note: This directive can also be relative to the global prefix.
 ; Default Value: none
 ;prefix = /path/to/pools/$pool
-prefix = /var/www
+;prefix = /var/www
 
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
@@ -343,7 +343,7 @@ request_slowlog_timeout = 15s
 ;       (error_log, sessions.save_path, ...).
 ; Default Value: not set
 ;chroot =
-chroot = $prefix
+;chroot = $prefix
 
 ; Chdir to this directory at the start.
 ; Note: relative path can be used.
@@ -395,8 +395,8 @@ catch_workers_output = yes
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/fpm-php.www.log
+;php_admin_value[error_log] = syslog
 ;php_admin_flag[log_errors] = on
-;php_admin_value[memory_limit] = 32M
-php_value[cgi.fix_pathinfo] = 0
-php_value[proxy-fcgi-pathinfo] = 0
+php_admin_value[memory_limit] = 64M
+;php_value[cgi.fix_pathinfo] = 0
+;php_value[proxy-fcgi-pathinfo] = 0
