removed volumes by default, leave that up to the runner; added helpful env vars for the docroot and cache dirs

--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -27,7 +27,6 @@ RUN a2enconf log \
 
 RUN /etc/service/apache/run -t 2>&1
 
-# Define the cache dir as a volume
-VOLUME /var/cache/apache2/mod_cache_disk
+ENV DOCROOT=/var/www CACHE=/var/cache/apache2/mod_cache_disk
 
 EXPOSE 80
