switched back to wp-php for upstream, forgot about newrelic

--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -1,26 +1,10 @@
-FROM nickbreen/cron:v2.0.1
+FROM nickbreen/wp-php:v1.3.0
 
 MAINTAINER Nick Breen <nick@foobar.net.nz>
 
-RUN echo 'deb http://apt.newrelic.com/debian/ newrelic non-free' | tee /etc/apt/sources.list.d/newrelic.list \
-    && curl -sSfL https://download.newrelic.com/548C16BF.gpg | apt-key add - \
-    && apt-get update -y \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-      newrelic-php5 \
-      php-http \
-      php-curl \
-      php-imagick \
-      php-fpm \
-      php-gd \
-      php-json \
-      php-mysql \
-      php-oauth \
+RUN apt-get update -y \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y php-fpm \
     && apt-get clean -y
-
-ENV NR_INSTALL_KEY="" NR_APP_NAME=""
-
-# Configure and test the PHP configurations
-RUN phpenmod curl gd imagick json mysqli oauth opcache
 
 # Configure a service entry for Apache
 RUN mkdir /etc/service/php-fpm/
@@ -28,9 +12,9 @@ COPY run /etc/service/php-fpm/run
 
 COPY www.conf /etc/php/7.0/fpm/pool.d/
 
+ENV DOCROOT=/var/www
+
 # Test the Configuration
-RUN mkdir -p /var/www && /etc/service/php-fpm/run -t 2>&1 && rm -rf /var/www
+RUN mkdir $DOCROOT && /etc/service/php-fpm/run -t 2>&1 && rm -rf $DOCROOT
 
 EXPOSE 9000
-
-ENV DOCROOT=/var/www
