fixed fpm php config

--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -1,4 +1,4 @@
-FROM nickbreen/wp-php:v1.3.0
+FROM nickbreen/wp-php:v1.3.1
 
 MAINTAINER Nick Breen <nick@foobar.net.nz>
 
@@ -7,10 +7,12 @@ RUN apt-get update -y \
     && apt-get clean -y
 
 # Configure a service entry for Apache
-RUN mkdir /etc/service/php-fpm/
 COPY run /etc/service/php-fpm/run
 
 COPY www.conf /etc/php/7.0/fpm/pool.d/
+
+# Enable for FPM
+RUN phpenmod newrelic-local newrelic curl gd imagick json mysqli oauth opcache
 
 ENV DOCROOT=/var/www
 
