--- a/apache/php-fpm.conf
+++ b/apache/php-fpm.conf
@@ -33,4 +33,7 @@
   # with a query string (like WordPress does for versioned CSS/JS files).
   ExpiresActive On
   ExpiresDefault "modifcation plus 5 minutes"
+
+  # We apparently can't trust WP to return a sane max-age.
+  Header edit* Cache-Control max-age=0 "max-age=300"
 </VirtualHost>
